--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "dayjs": "^1.10.6",
     "graphql": "^15.5.1",
+    "history": "^5.0.0",
     "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
