--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
