--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon --exec ts-node server.ts"
+    "server": "nodemon --exec ts-node server.ts",
+    "client": "cd .. && cd client && npm run start",
+    "start": "npm-run-all --parallel server client"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "graphql-tools": "^7.0.5",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
