--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "apollo3-cache-persist": "^0.11.0",
     "dayjs": "^1.10.6",
     "graphql": "^15.5.1",
     "history": "^5.0.0",
