--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "graphql": "^15.5.1",
     "history": "^5.0.0",
     "immer": "^9.0.5",
+    "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
