--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,11 @@
     "dayjs": "^1.10.6",
     "graphql": "^15.5.1",
     "history": "^5.0.0",
-    "immer": "^9.0.5",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-intersection-observer": "^8.32.0",
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^6.0.0-beta.0",
