--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ioredis": "^4.26.6",
     "@types/node": "^16.4.3",
     "apollo-server": "^3.0.2",
     "apollo-server-express": "^3.0.2",
