--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-jwt": "^6.0.2",
     "@types/ioredis": "^4.26.6",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.3",
     "apollo-server": "^3.0.2",
     "apollo-server-express": "^3.0.2",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.1.0",
