--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,14 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
+    "subscriptions-transport-ws": "^0.9.19",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
